# dto/user.go
@@ -7,3 +7,13 @@ type UserData struct {
 	Username string    `json:"fullname"`
 	Email    string    `json:"email"`
 }
+
+type UserRegisterReq struct {
+	Email    string `json:"email"`
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type UserRegisterResp struct {
+	Message string `json:"message"`
+}
