# main.go
@@ -4,6 +4,7 @@ import (
 	"topupservice/internal/api"
 	"topupservice/internal/component"
 	"topupservice/internal/config"
+	"topupservice/internal/middleware"
 	"topupservice/internal/repository"
 	"topupservice/internal/service"
 
@@ -13,6 +14,9 @@ import (
 	"github.com/gofiber/fiber/v2/middleware/logger"
 )
 
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
 	cnf := config.Get()
 	dbConnection := component.GetDatabaseConnection(cnf)
@@ -20,12 +24,15 @@ func main() {
 	userRepository := repository.User(dbConnection)
 
 	userService := service.User(userRepository)
+	authService := service.Auth(userRepository)
+
+	authMiddleware := middleware.Authenticate(authService)
 
 	app := fiber.New()
 	app.Use(cors.New(cors.Config{
-		AllowOrigins: "*",                                           // "http://localhost:3000, http://localhost:5173, http://localhost:8081, http://localhost:8080", // Membolehkan domain tertentu
-		AllowMethods: "GET,POST,PUT,DELETE,PATCH",                   // Metode HTTP yang diizinkan
-		AllowHeaders: "Origin, Content-Type, Accept, Authorization", // Header yang diizinkan
+		AllowOrigins: "http://localhost:3000, http://localhost:5173, http://localhost:8081, http://localhost:8080", // Membolehkan domain tertentu
+		AllowMethods: "GET,POST,PUT,DELETE,PATCH",                                                                  // Metode HTTP yang diizinkan
+		AllowHeaders: "Origin, Content-Type, Accept, Authorization",                                                // Header yang diizinkan
 	}))
 
 	app.Use(logger.New(logger.Config{
@@ -50,6 +57,7 @@ func main() {
 	})
 	apiRoutes := app.Group("api")
 
+	api.Auth(apiRoutes.(*fiber.Group), authService, authMiddleware)
 	api.User(apiRoutes.(*fiber.Group), userService)
 	// app.Get("/", func(c *fiber.Ctx) error {
 	// 	return c.SendString("Hello, World!")
